--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• بالتزامن مع الميزات الجديدة القادمة في نسخة iOS 18 لتخصيص أيقونات التطبيق، قمنا بإضافة ميزة دعم إضافية. الآن وعندما تقوم بضبط الشاشة الرئيسية لجهاز iOS لديك لاستخدام الأيقونات الداكنة أو الملونة، سيقوم سيجنال بالتكيُّف معها وفقًا لذلك. حيث يمكنك اختيار نمط اللون الأحادي بالكامل أو اختيار نمط ألوان يتناسب مع مخيّلتك الواسعة.
