--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Мы добавили поддержку новых функций настройки значка приложения, которые появятся в iOS 18. Теперь при настройке главного экрана iOS на использование тёмных или тонированных значков Signal будет адаптироваться соответствующим образом. Сделайте значок полностью монохромным или выберите цветовую гамму, соответствующую вашему богатому воображению.
