--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Da ora Signal supporterà le nuove opzioni per la personalizzazione delle icone delle app che arriveranno con iOS 18. Quindi se configuri la Home di iOS per usare icone con il tema dark o a tinte, Signal si adatterà di conseguenza. Qualsiasi stile sceglierai per il tuo telefono, l'icona di Signal sarà sempre alla moda!
