--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• We hebben ondersteuning toegevoegd voor de nieuwe functies in iOS 18 waarmee je app-pictogrammen aan kunt passen. Wanneer je het iOS-beginscherm configureert met donkere of gekleurde pictogrammen, past Signal zich aan deze instelling aan. Maak de pictogrammen monochroom of ga voor een iconische kleurencombinatie.
