--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features that are coming in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• iOS 18'de gelecek olan yeni uygulama simgesi özelleştirme özellikleri için destek ekledik. Bundan sonra iOS Ana Ekranını koyu veya renkli simgeler kullanmak üzere yapılandırdığında, Signal buna uyum sağlayacak. Tamamen tek renkli ol ya da renkli hayal gücüne uygun rengarenk bir şema seç.
